2008-07-28  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/libtracker-db/tracker-db-manager.c: Added compress and
	uncompress functions for attached database connections

2008-07-28  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/trackerd/tracker-metadata.c:
	* src/libtracker-db/tracker-db-dbus.h:
	* src/libtracker-db/tracker-db-dbus.c:

	Make tracker_metadata_get return the columns as a GStrv, not the rows.
	This patch fixed tracker-search-tool's crash

2008-07-28  Carlos Garnacho  <carlos@imendio.com>

	* src/trackerd/tracker-crawler.c (file_enumerate_next_cb): Do not leak
	file infos and the enumerator.
	(tracker_crawler_start): Free remaining elements in the list.
	* src/trackerd/tracker-main.c (main): The index objects are owned by
	the index manager. Do not free them there.
	* src/trackerd/tracker-monitor.c (tracker_monitor_init): Do not leak
	the test monitor.

2008-07-28  Philip Van Hoof  <pvanhoof@gnome.org>

	* utils/qdbm/print-words.c: Open the qdbm file in DP_ONOLCK mode, like
	the application itself does

2008-07-28  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/tracker-indexer/tracker-index.c:
	* src/tracker-indexer/tracker-index.h:
	* src/tracker-indexer/tracker-indexer.c:

	Open and close the QDBM file during pause and continue

2008-07-28  Carlos Garnacho  <carlos@imendio.com>

	* src/libtracker-common/tracker-config.c (config_load_string_list)
	(tracker_config_add_watch_directory_roots)
	(tracker_config_add_crawl_directory_roots)
	(tracker_config_add_no_watch_directory_roots): Plug some leaks.
	* src/libtracker-db/tracker-db-manager.c (db_get_static_data)
	(db_get_static_xesam_data): Same here.
	* src/tracker-indexer/modules/evolution.c
	(get_account_name_from_imap_uri): Do not try to parse the wrong mail
	URIs.
	* src/tracker-indexer/tracker-index.c (tracker_index_free): Fix
	invalid memory reads.
	* src/tracker-indexer/tracker-indexer (tracker_indexer_finalize): Fix
	invalid free().

2008-07-25  Martyn Russell  <martyn@imendio.com>
